# mini_github_app_using_ocaml

./: .gitignore  Makefile  README.md  dune  irmin-demo.opam  simple-mini-github.opam  simple_mini_github.opam
.github/workflows/: setup.yml
api/: app.ml  app.mli  dune
client/: client.ml  dune  repo_data.ml
client/lib/: dune  shared.ml  shared.mli
server/: dune  server.eml.ml
server/api/: app.ml  app.mli  dune
static/: client.js  style.css
