opam-version: "2.0"

synopsis: "A mini-github applicatio"
description: "This application is a sample project on how to combine irmin-graphql with dream and display queries on he browser using js_of_ocaml"

license: "MIT"
homepage: "https://github.com/dinakajoy/simple_mini_github"
bug-reports: "https://github.com/dinakajoy/simple_mini_github/issues"

author: "Odinaka Joy <dinakajoy@gmail.com> and Patrick Ferris <pf341@patricoferris.com>"
maintainer: "Odinaka Joy <dinakajoy@gmail.com> and Patrick Ferris <pf341@patricoferris.com>"

depends: [
  "dream" {= "1.0.0~alpha2"}
  "dune" {>= "2.8.0"} 
  "js_of_ocaml-lwt" {= "3.11.0"}
  "js_of_ocaml-ppx"
  "ezjsonm" {>= "1.3.0"}
  "brr" {>= "0.0.2"}
  "irmin" {= "2.9.1"}
  "ocaml" {>= "4.13.1"}
]